--- a/src/app/component/modal/modal.component.scss
+++ b/src/app/component/modal/modal.component.scss
@@ -1,22 +1,55 @@
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Adjust the transparency here */
-    z-index: 9999;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .modal-container {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Adjust the transparency here */
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.modal-container {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+}
 
-  
-  
+/* Styles for .modal-container */
+.modal-container label {
+  font-weight: bold;
+}
+
+.modal-container input[type="text"],
+.modal-container input[type="checkbox"] {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid gray;
+  margin-bottom: 10px;
+}
+
+.modal-container .btn-dark {
+  background-color: darkblue;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+}
+
+/* Two columns layout */
+
+.modal-container .column {
+  flex-basis: 50%;
+  padding-right: 10px;
+}
+
+@media (max-width: 600px) {
+  .modal-container .column {
+    flex-basis: 100%;
+    padding-right: 0;
+  }
+}
