--- a/src/app/component/acts1/acts1.component.html
+++ b/src/app/component/acts1/acts1.component.html
@@ -11,7 +11,7 @@
         <div class="card_div">
           <h2 style="margin: 10px">{{ item.id }}. {{ item.name_of_act }}</h2>
           <div>
-            <i class="fa-solid fa-pen-to-square" (click)="updateAct(item)" ></i>
+            <i class="fa-solid fa-pen-to-square" (click)="updateAct(item)"></i>
             <i class="fa-solid fa-trash" (click)="deleteAct(item)"></i>
           </div>
         </div>
@@ -24,6 +24,7 @@
         class="card-container"
         (formDataEvent)="handleFormData($event)"
         (hideChildEvent)="hideChild()"
+        [FormData]="updateActData"
       >
       </app-modal>
     </ng-container>
