--- a/src/app/component/modal/modal.component.html
+++ b/src/app/component/modal/modal.component.html
@@ -3,40 +3,13 @@
     <button type="button" class="btn-close" (click)="closeBox()"></button>
     <app-card>
       <form #act1question="ngForm" (ngSubmit)="onsubmit(act1question)">
-        <h3>Mention the act details</h3>
-        <label for="actName">Name of the act ?</label>
-        <input type="text" ngModel required id="actName" name="name_of_act" />
-
-        <label for="name_of_section">Name of the section in the act ?</label>
-        <input
-          type="text"
-          ngModel
-          required
-          id="name_of_section"
-          name="name_of_section"
-        />
-
-        <label for="subsection"
-          >Subsection: Tick if act has a sub section</label
-        >
-        <input
-          type="checkbox"
-          [(ngModel)]="subsection"
-          id="subsection"
-          name="subsection"
-        />
-
-        <label for="subSectionName">If there is any subsection? </label>
-        <input
-          type="text"
-          ngModel
-          required
-          id="subSectionName"
-          name="subSectionName"
-        />
-
-        <label for="data">Information you want to provide in subsection?</label>
-        <input type="text" ngModel required id="data" name="data" />
+        <h3>{{headings.heading1}}</h3>
+        <label for="actName">{{headings.heading2}}</label>
+        <input type="text" 
+        ngModel 
+        required 
+        id="actName" 
+        name="data" />
         <button>Enter</button>
       </form>
     </app-card>
