--- a/src/app/component/subject-section/subject-section.component.scss
+++ b/src/app/component/subject-section/subject-section.component.scss
@@ -7,14 +7,10 @@
   .card_div h2 {
     margin: 10px;
     align-self: flex-start;
-    cursor: pointer;
   }
   
   .card_div i {
     align-self: center;
     justify-self: center;
-    margin: 0;
-  }
-  .deleteIcon{
-    padding: 20px;
-  }
+    margin: 20px;
+  } 
