--- a/src/app/component/acts1/acts1.component.html
+++ b/src/app/component/acts1/acts1.component.html
@@ -9,9 +9,11 @@
     <div *ngFor="let item of data1">
       <app-card>
         <div class="card_div">
-          <h2 style="margin: 10px">{{ item.id }}. {{ item.name_of_act }}</h2>
-          <div>
-            <i class="fa-solid fa-pen-to-square" (click)="updateAct(item)"></i>
+          <div (click)="displaySubject_section(item)">
+            <h2 style="margin: 10px">{{ item.id }}. {{ item.name_of_act }}</h2>
+          </div>
+          <div class="deleteIcon">
+            <!-- <i class="fa-solid fa-pen-to-square" (click)="updateAct(item)"></i> -->
             <i class="fa-solid fa-trash" (click)="deleteAct(item)"></i>
           </div>
         </div>
@@ -24,7 +26,8 @@
         class="card-container"
         (formDataEvent)="handleFormData($event)"
         (hideChildEvent)="hideChild()"
-        [FormData]="updateActData"
+        [formData]="updateActData"
+        [headings]="headings"
       >
       </app-modal>
     </ng-container>
