--- a/src/app/component/subject-section/subject-section.component.html
+++ b/src/app/component/subject-section/subject-section.component.html
@@ -22,12 +22,13 @@
   <div *ngFor="let item of data">
     <app-card>
       <div class="card_div">
-        <div><h2 style="margin: 10px">{{ item.id }}. {{ item.subject_section }}</h2></div>
+        <div class="routing" (click)="routeSubSelectSection(item)"><h2 style="margin: 10px">{{ item.id }}. {{ item.subject_section }}</h2></div>
         <div>
           <i class="fa-solid fa-pen-to-square"></i>
           <i class="fa-solid fa-trash"></i>
         </div>
       </div>
     </app-card>
+    <br>
   </div>
 </div>
