--- a/src/app/component/acts1/acts1.component.scss
+++ b/src/app/component/acts1/acts1.component.scss
@@ -13,7 +13,7 @@
   .card_div i {
     align-self: center;
     justify-self: center;
-    margin: 0;
+    margin: 10px;
   }
   .deleteIcon{
     padding: 20px;
