--- a/src/app/component/modal/modal.component.scss
+++ b/src/app/component/modal/modal.component.scss
@@ -15,6 +15,8 @@
   background-color: #ffffff;
   padding: 20px;
   border-radius: 8px;
+  width: 50%;
+  height: 70%;
 }
 
 /* Styles for .modal-container */
