--- a/src/app/component/doc-display/doc-display.component.html
+++ b/src/app/component/doc-display/doc-display.component.html
@@ -3,10 +3,9 @@
     <button type="button" class="btn-close" (click)="closeBox()"></button>
     <div class="card-content">
       <div class="docData">
-        <h6>{{ Docdata }}</h6>
+        <pre class="postDocData">{{ Docdata }}</pre>
       </div>
     </div>
-
     <ng-content></ng-content>
   </div>
 </div>
