--- a/src/app/component/doc-display/doc-display.component.scss
+++ b/src/app/component/doc-display/doc-display.component.scss
@@ -41,3 +41,13 @@
   border: 0.1px solid rgb(117, 115, 115);
   height: 35rem;
 }
+
+.postDocData{
+  font-size: 15px;
+  font-weight: 900;
+  overflow: hidden;
+  white-space: pre-wrap;
+  padding: 10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+ }
