--- a/src/app/component/gst-rate/gst-rate.component.html
+++ b/src/app/component/gst-rate/gst-rate.component.html
@@ -1,7 +1,7 @@
 <div>
     <div>
       <button type="button" class="btn btn-primary" (click)="openModal()">
-        Add Acts
+        Add GST
       </button>
     </div>
     <div>
