--- a/src/app/component/rules/rules.component.html
+++ b/src/app/component/rules/rules.component.html
@@ -1,7 +1,7 @@
 <div>
   <div>
     <button type="button" class="btn btn-primary" (click)="openModal()">
-      Add Acts
+      Add Rules
     </button>
   </div>
   <div>
