--- a/src/app/views/comment/comment/comment.component.html
+++ b/src/app/views/comment/comment/comment.component.html
@@ -1,57 +1,26 @@
-<div>
+<div class="container">
   <h3 class="my-heading">Home</h3>
-  <!-- <textarea name="" id="" cols="140" rows="10" placeholder="  " [(ngModel)]="model.comment"></textarea> -->
-  <a routerLink="/question" style="text-align: center">
+  <a class="add-question-link" routerLink="/question">
     <p>Add Question</p>
   </a>
-  <!-- <button (click)="post()" class="btn btn-primary">Comment</button>  -->
+
+  <hr />
+
+  <div class="card-container">
+    <div class="card" *ngFor="let q of newData" (click)="navigateToQuestion(q.questionID)">
+      <div class="card-header">
+        <h2 class="comment-text">{{ q?.qFullName }}</h2>
+        <h3 class="comment-id">Question ID {{ q?.questionID }}</h3>
+      </div>
+      <div class="card-body">
+        <h1 class="question-text">{{ q?.question }} ?</h1>
+        <div class="answer-container" *ngFor="let q2 of q.answers">
+          <div class="answer-details">
+            <h2 class="answer-name">{{ q2?.name }}</h2>
+            <p class="answer-text">{{ q2?.answer }}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<hr />
-<h3>Working</h3>
-
-<div
-  class="comment-container"
-  *ngFor="let q of newData"
-  (click)="navigateToQuestion(q.questionID)"
-  style="
-    height: 180;
-    width: 300;
-    border-style: groove;
-    border-radius: 10px;
-    border-color: rgb(248, 243, 243);
-    padding-bottom: 10px;
-    background-color: rgb(251, 251, 252);
-  "
->
-  <p class="comment-text">Name: {{q?.qFullName  }}</p>
-
-  <p class="comment-id">QuestionId: {{ q?.questionID}}</p>
-  <p class="comment-text">Question: {{ q?.question }}</p>
-
-  <div *ngFor="let q2 of q.answers">
-    <p class="comment-text">Name: {{ q2?.name  }}</p>
-    <p>Answer: {{q2?.answer  }}</p>
-  </div>
-
-
-
-
-  <!-- //////////////////////////////////////////////////////////////////////////// -->
-  <!-- <div *ngFor="let q of newData">
-  {{ q?.qFullName }}
-
-  <br />
-  {{ q?.questionID }}
-  <br />
-  {{ q?.question }}
-
-  <br />
-
-  <div *ngFor="let q2 of q.answers">
-    {{ q2?.ansFName }}
-    <br />
-    {{ q2?.answer }}
-    <br />
-  </div>
-</div> -->
-<!-- </div> -->
