--- a/src/app/component/sub-section/sub-section.component.html
+++ b/src/app/component/sub-section/sub-section.component.html
@@ -28,6 +28,8 @@
   <div *ngFor="let section of ModuleInfoTable">
     <app-card>
       <div class="card_div">
+        <h2>{{section.sno}}.</h2>
+
         <h2>
           <ng-container *ngFor="let value of section.Name.split(',')">
             {{ value }}<br />
