--- a/src/app/component/sub-section/sub-section.component.scss
+++ b/src/app/component/sub-section/sub-section.component.scss
@@ -8,7 +8,7 @@
 }
 .card_div {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
 }
 
@@ -25,8 +25,13 @@
 }
 
 .icon-container {
-  font-size: 2rem;
-  margin-right: 5rem; /* Adjust the font size as needed */
+  // font-size: 2rem;
+  // margin-right: 5rem; /* Adjust the font size as needed */
+  // justify-self: end;
+  // align-self: center;
+  position: absolute;
+  top: 10px; 
+  right: 10px;
 }
 
 .fa-solid.fa-file {
