--- a/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/src/app/containers/default-layout/default-header/default-header.component.html
@@ -13,38 +13,38 @@
       ></svg>
     </button>
     <c-header-nav class="d-none d-lg-flex me-auto">
-      <!-- <c-nav-item>
+       <c-nav-item>
         <a cNavLink routerLink="/dashboard" routerLinkActive="active">
           Dashboard
         </a>
-      </c-nav-item> -->
-      <!-- <c-nav-item>
+      </c-nav-item> 
+       <c-nav-item>
         <a cNavLink routerLink="/users" routerLinkActive="active">Users</a>
-      </c-nav-item> -->
-      <!-- <c-nav-item>
+      </c-nav-item> 
+      <c-nav-item>
         <a cNavLink routerLink="/settings" routerLinkActive="active">
           Settings
         </a>
-      </c-nav-item> -->
+      </c-nav-item>
     </c-header-nav>
 
-    <!-- <c-header-nav class="d-none d-lg-flex">
+    <c-header-nav class="d-none d-lg-flex">
       <c-nav-item>
-        <a routerLink="./" cNavLink>
+        <a routerLink="./comment" cNavLink>
           <svg cIcon name="cilBell" size="lg"></svg>
         </a>
       </c-nav-item>
       <c-nav-item>
-        <a routerLink="./" cNavLink>
+        <a routerLink="./comment" cNavLink>
           <svg cIcon name="cilList" size="lg"></svg>
         </a>
       </c-nav-item>
       <c-nav-item>
-        <a routerLink="./" cNavLink>
+        <a routerLink="./comment" cNavLink>
           <svg cIcon name="cilEnvelopeOpen" size="lg"></svg>
         </a>
       </c-nav-item>
-    </c-header-nav> -->
+    </c-header-nav>
     <c-header-nav class="ms-3">
       <ng-container *ngTemplateOutlet="userDropdown"></ng-container>
     </c-header-nav>
@@ -80,7 +80,7 @@
         <h6 cDropdownHeader class="bg-light fw-semibold py-2">Account</h6>
       </li>
       <li>
-        <a routerLink="./" cDropdownItem>
+        <a routerLink="./comment" cDropdownItem>
           <svg cIcon class="me-2" name="cilBell"></svg>
           Updates
           <c-badge class="ms-2 float-end" color="info">
@@ -89,7 +89,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="./" cDropdownItem>
+        <a routerLink="./comment" cDropdownItem>
           <svg cIcon class="me-2" name="cilEnvelopeOpen"></svg>
           Messages
           <c-badge class="ms-2 float-end" color="success">
@@ -98,7 +98,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="./" cDropdownItem>
+        <a routerLink="./comment" cDropdownItem>
           <svg cIcon class="me-2" name="cilTask"></svg>
           Tasks
           <c-badge class="ms-2 float-end" color="danger">
@@ -107,7 +107,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="./" cDropdownItem>
+        <a routerLink="./comment" cDropdownItem>
           <svg cIcon class="me-2" name='cilCommentSquare'></svg>
           Comments
           <c-badge class="ms-auto" color="warning">
@@ -126,13 +126,13 @@
         </a>
       </li>
       <li>
-        <a routerLink="./" cDropdownItem>
+        <a routerLink="./comment" cDropdownItem>
           <svg cIcon class="me-2" name="cilSettings"></svg>
           Settings
         </a>
       </li>
       <li>
-        <a routerLink="./" cDropdownItem>
+        <a routerLink="./comment" cDropdownItem>
           <svg cIcon class="me-2" name="cilCreditCard"></svg>
           Payments
           <c-badge class="ms-2 float-end" color="secondary">
@@ -141,7 +141,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="./" cDropdownItem>
+        <a routerLink="./comment" cDropdownItem>
           <svg cIcon class="me-2" name="cilFile"></svg>
           Projects
           <c-badge class="ms-2 float-end" color="primary">
@@ -153,7 +153,7 @@
         <hr cDropdownDivider/>
       </li>
       <li>
-        <a routerLink="./" cDropdownItem (click)="logout()">
+        <a routerLink="./comment" cDropdownItem (click)="logout()">
           <svg cIcon class="me-2" name="cilLockLocked"></svg>
           Log out
         </a>
