--- a/src/app/component/section/section.component.scss
+++ b/src/app/component/section/section.component.scss
@@ -1,27 +1,22 @@
 .card_div {
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
 }
-
+.card_div2 {
+  display: flex;
+}
 .card_div h2 {
   margin: 10px;
   align-self: flex-start;
   cursor: pointer;
 }
 
-.card_div i {
-  align-self: center;
-  justify-self: center;
-  margin: 10px;
-}
-
 .icon-container {
-  font-size: 2rem;
-  margin-right: 5rem; /* Adjust the font size as needed */
+  padding: 10px;
+  cursor: pointer;
 }
 
 .fa-solid.fa-file {
   font-size: 2rem; /* Adjust the icon size as needed */
 }
-
