--- a/src/app/component/section/section.component.html
+++ b/src/app/component/section/section.component.html
@@ -31,14 +31,15 @@
       (click)="section.data ? null : roteToSubSection(section)"
     >
       <div class="card_div">
-        <h2>{{section.sno}}.</h2>
+        <div  class="card_div2">
+          <h2>{{ section.sno }}.</h2>
+          <h2>
+            <ng-container *ngFor="let value of section.Name.split(',')">
+              {{ value }}<br />
+            </ng-container>
+          </h2>
+        </div>
 
-        <h2>
-          <ng-container *ngFor="let value of section.Name.split(',')">
-
-            {{ value }}<br />
-          </ng-container>
-        </h2>
         <div
           *ngIf="section.data"
           class="icon-container"
