--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -11,24 +11,21 @@
       width: 200,
       height: 46,
       alt: 'CoreUI Logo'
-    }" 
+    }"
     [brandNarrow]="{
       src: 'assets/img/brand/advocate.svg',
-      width: 46,
+      width: 46,  
       height: 46,
       alt: 'CoreUI Logo'
     }"
-    routerLink="./"
+    routerLink="./comment"
   >
   </c-sidebar-brand>
-    <perfect-scrollbar [config]="perfectScrollbarConfig">
-   <!-- [perfectScrollbar]="perfectScrollbarConfig" -->
-  <c-sidebar-nav
-    [navItems]="navItems"
-    dropdownMode="close"
-  >
-  </c-sidebar-nav>
-    </perfect-scrollbar>
+  <perfect-scrollbar [config]="perfectScrollbarConfig">
+    <c-sidebar-nav [navItems]="navItems" dropdownMode="close" (click)="handleItemClick($event)">
+    </c-sidebar-nav>
+  </perfect-scrollbar>
+  
   <c-sidebar-toggler
     *ngIf="!sidebar.narrow"
     toggle="unfoldable"
@@ -36,12 +33,15 @@
   ></c-sidebar-toggler>
 </c-sidebar>
 
-
 <!--main-->
 
 <div class="wrapper d-flex flex-column min-vh-100 bg-light dark:bg-transparent">
   <!--app-header-->
-  <app-default-header class="mb-4 d-print-none header header-sticky" position="sticky" sidebarId="sidebar"></app-default-header>
+  <app-default-header
+    class="mb-4 d-print-none header header-sticky"
+    position="sticky"
+    sidebarId="sidebar"
+  ></app-default-header>
   <!--app-body-->
   <div class="body flex-grow-1 px-3">
     <c-container breakpoint="lg" class="h-auto">
