--- a/src/app/component/doc-display/doc-display.component.scss
+++ b/src/app/component/doc-display/doc-display.component.scss
@@ -40,12 +40,12 @@
   border-radius: 5px;
   border: 0.1px solid rgb(117, 115, 115);
   height: 35rem;
+  overflow: scroll;
 }
 
 .postDocData{
   font-size: 15px;
   font-weight: 900;
-  overflow: hidden;
   white-space: pre-wrap;
   padding: 10px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
