--- a/src/app/containers/login/login.component.html
+++ b/src/app/containers/login/login.component.html
@@ -5,6 +5,8 @@
       <!-- <img src="\src\assets\img\brand\usericon.png"><br>Log In -->
     </h3>
   </div>
+  <lib-toastify-toast-container position='top-right'></lib-toastify-toast-container>
+
   <div class="card-body">
     <form [formGroup]="formLogin">
       <div class="form-group">
