--- a/src/app/component/Morecomponents/card2/card2.component.scss
+++ b/src/app/component/Morecomponents/card2/card2.component.scss
@@ -9,8 +9,14 @@ cursor: pointer;
     border-radius: 5px;
     margin: 0;
     padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card-title h3{
+color: blue;
 }
 .card-content{
     padding: 5px;
-
+    margin-left: 15px;
 }
