--- a/src/app/component/council-meetings/council-meetings.component.html
+++ b/src/app/component/council-meetings/council-meetings.component.html
@@ -19,5 +19,5 @@
   </ng-container>
 </div>
 <br />
-<app-card2 [CardData]="CardData" (receiveCardData)="receiveCardData($event)">
+<app-card2 [CardData]="CardData" [heading]="heading" (receiveCardData)="receiveCardData($event)">
 </app-card2>
