--- a/src/app/component/forms/forms.component.html
+++ b/src/app/component/forms/forms.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-primary" (click)="openModal()">Add Draft Reply</button>
+<button class="btn btn-primary" (click)="openModal()">Add Form  </button>
 <div>
   <ng-container *ngIf="isDocDisplayOpen">
     <app-doc-display
