--- a/src/app/component/Morecomponents/card2/card2.component.html
+++ b/src/app/component/Morecomponents/card2/card2.component.html
@@ -3,21 +3,24 @@
     <div class="card" (click)="sendItem(item)">
       <div class="card-inner">
         <div>
-          <div class="card-title" *ngIf="item.date">
-            <h3>date:</h3>
+          <div class="card-title" *ngIf="item.date || item.Subject">
+            <h3>{{ heading.h1 }}:</h3>
           </div>
+
           <div class="card-title">
-            <h3>Subject:</h3>
+            <h3>{{ heading.h2 }}:</h3>
           </div>
         </div>
         <div>
-          <div class="card-content"  *ngIf="item.date">
-            <h2>{{item.samay}}</h2>
+          <div class="card-content" *ngIf="item.date">
+            <h2>{{ item.samay }}</h2>
+          </div>
+          <div class="card-content" *ngIf="item.Subject">
+            <h2>{{ item.Subject }}</h2>
           </div>
           <div class="card-content">
             <h2>{{ item.Name }}</h2>
           </div>
-
         </div>
 
         <ng-content></ng-content>
