--- a/src/app/component/Morecomponents/card2/card2.component.scss
+++ b/src/app/component/Morecomponents/card2/card2.component.scss
@@ -5,16 +5,14 @@ margin: 0;
 cursor: pointer;
 }
 .card-title{
-    background-color: rgb(96, 144, 185);
-    border-radius: 5px;
     margin: 0;
     padding: 5px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
 }
 .card-title h3{
-color: blue;
+margin: 20;
 }
 .card-content{
     padding: 5px;
