--- a/src/app/component/Morecomponents/modal2/modal2.component.scss
+++ b/src/app/component/Morecomponents/modal2/modal2.component.scss
@@ -12,20 +12,20 @@
 }
 
 .modal-container {
+  border: 1px solid rgb(7, 57, 97);
   background-color: #ffffff;
   padding: 20px;
   border-radius: 8px;
-  width: 80%;
-  height: 80%;
-  max-width: 90%;
-  max-height: 90%;
+  width: 90%;
+  height: 90%;
   display: flex;
   flex-direction: column;
+  margin: 0;
 }
 
 .card-container {
-  flex: 1;
-  border: 0.2px solid black;
+
+  border: 2px solid rgb(0, 0, 0);
   padding: 20px;
   border-radius: 8px;
   color: #000000;
@@ -34,7 +34,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  position: relative; /* Add this line */
+  // position: relative; /* Add this line */
 
 }
 
@@ -44,26 +44,21 @@
 }
 
 .modal-container input[type="text"],
-.modal-container input[type="checkbox"] {
+.modal-container input[type="date"]{
   width: 100%;
   padding: 5px;
   border: 1px solid gray;
-  margin-bottom: 10px;
 }
 .text-areaDiv{
-  height: 100%;
+  height: 85%;
 }
 textarea {
   box-sizing: border-box;
   width: 100%;
-
-  height: 100%;
-  padding: 10px;
+  height: 80%;
   border: 1px solid #ccc;
   font-family: Arial, sans-serif;
   font-size: 14px;
-  line-height: 1.5;
-  resize: vertical;
 }
 
 /* Apply additional styles for focus and hover effects */
@@ -77,11 +72,6 @@ textarea:hover {
   border-color: #999;
 }
 
-/* Two columns layout */
-.modal-container .column {
-  flex-basis: 50%;
-  padding-right: 10px;
-}
 
 @media (max-width: 600px) {
   .modal-container .column {
@@ -90,10 +80,7 @@ textarea:hover {
   }
 }
 .button2 {
-  /* Existing code */
-  position: absolute;
-  bottom: 20px; /* Adjust the bottom spacing as needed */
-  right: 20px; /* Adjust the right spacing as needed */
+  // position: absolute;
 }
 .validation-error {
   margin-top: 0;
