--- a/src/app/component/acts1/acts1.component.html
+++ b/src/app/component/acts1/acts1.component.html
@@ -19,7 +19,7 @@
   <div *ngFor="let act of ActData">
     <app-card (click)="roteToSubjectSelect(act)">
       <div class="card_div">
-        <h2>{{act.sno}}</h2>
+        <h2>{{ act.sno }}.</h2>
 
         <h2>{{ act.Name }}</h2>
       </div>
