--- a/src/app/component/doc-display/doc-display.component.scss
+++ b/src/app/component/doc-display/doc-display.component.scss
@@ -19,6 +19,7 @@
   height: 90%;
 }
 .card-container {
+  border: 1px solid rgb(194, 11, 11);
   position: fixed;
   top: 50%;
   left: 50%;
@@ -39,7 +40,7 @@
   margin: 20px;
   border-radius: 5px;
   border: 0.1px solid rgb(117, 115, 115);
-  height: 35rem;
+  height: 32rem;
   overflow: scroll;
 }
 
