--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -1,5 +1,5 @@
 <h1>Welcome to Your Profile Page</h1>
-
+<lib-toastify-toast-container></lib-toastify-toast-container>
 <form #profileForm="ngForm" (ngSubmit)="onsubmit(profileForm)">
   <div>
     <label for="name">Name:</label>
