--- a/src/app/containers/signup/signup.component.css
+++ b/src/app/containers/signup/signup.component.css
@@ -49,9 +49,9 @@
       
       /* Style the submit  button */
       .button1 {
-        background-color: rgb(140, 140, 235);
-        color: white;
-        border: none;
+        background-color: rgb(226, 226, 226);
+        color: rgb(12, 9, 9);
+        border: 2px solid black;
         padding: 10px 20px;
         text-align: center;
         text-decoration: none;
@@ -63,10 +63,10 @@
       }
 
       /* Style the reset  button */
-      .button2 {
-        background-color: rgb(52, 82, 179);
-        color: white;
-        border: none;
+      .card-header2  {
+        background-color: rgb(255, 255, 255);
+        color: rgb(3, 2, 2);
+        border: 2px solid black;
         padding: 10px 20px;
         text-align: center;
         text-decoration: none;
@@ -78,7 +78,7 @@
       }
       
       .button1:hover, .button2:hover {
-        background-color: rgb(84, 132, 177);
+        background-color: rgb(20, 110, 194);
         color: white;
       }
       
