--- a/src/app/containers/signup/signup.component.html
+++ b/src/app/containers/signup/signup.component.html
@@ -1,6 +1,6 @@
-
+<lib-toastify-toast-container></lib-toastify-toast-container>
 <div class="card center card" style="width: 25rem;">
-  <div class="card-body card-header" >
+  <div class="card-body card-header">
     <h3 style="text-align: center; font-family: 'Times New Roman', Times, serif;">
       <mat-icon>account_circle</mat-icon> <br>
       Registration Form
@@ -8,23 +8,27 @@
   </div>
   <div class="card-body">
     <form [formGroup]="formsignup">
-
       <div class="form-group">
         <label for="fullName">Full Name:</label>
-        <input type="text" class="form-control" formControlName="fullName" id="fullName" placeholder="Enter Your Name " />
-        </div>
-      
-     <div class="form-group">
+        <input type="text" class="form-control" formControlName="fullName" id="fullName" placeholder="Enter Your Name" />
+        <div *ngIf="formsignup.controls['fullName'].invalid && formsignup.controls['fullName'].touched"
+          class="text-danger">Full name is required</div>
+      </div>
+      <div class="form-group">
         <label for="email">Email:</label>
         <input type="email" class="form-control" formControlName="email" id="email" placeholder="Enter Email" />
+        <div *ngIf="formsignup.controls['email'].invalid && formsignup.controls['email'].touched"
+          class="text-danger">Please enter a valid email</div>
       </div>
       <div class="form-group">
         <label for="pwd">Password:</label>
-        <input type="password" class="form-control " formControlName="password" id="pwd" placeholder="Enter Password" />
+        <input type="password" class="form-control" formControlName="password" id="pwd" placeholder="Enter Password" />
+        <div *ngIf="formsignup.controls['password'].invalid && formsignup.controls['password'].touched"
+          class="text-danger">Password is required (minimum 6 characters)</div>
       </div>
-      <button type="submit" class="card-header button1" (click)="addData()" class="btn btn-primary button2">Submit</button>&nbsp;
-    
+      <button type="submit" class="card-header2 button1 btn btn-primary button2" (click)="addData()">Submit</button>&nbsp;
       <button type="reset" class="btn btn-secondary button1">Reset</button><br /><br />
-      If you have an account <a  class="login-link"routerLink="/login">Log In here</a>
+      If you have an account <a class="login-link" routerLink="/login">Log In here</a>
     </form>
   </div>
+</div>
