--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -82,6 +82,6 @@
 
   <div>
     <button type="submit" [disabled]="!profileForm.valid" class="save-profile-button">Save Profile</button>
-    <button type="button">Change Password</button>
+    <button type="button" routerLink="/changepassword">Change Password</button>
   </div>
 </form>
