--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -53,12 +53,8 @@
       id="email"
       name="email"
       [(ngModel)]="ngemail"
-      required
-      pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+      readonly      
     />
-    <!-- <span class="error-message" *ngIf="profileForm.controls['email'].invalid && profileForm.controls['email'].touched">
-      Please enter a valid email address.
-    </span> -->
   </div>
   
 
