--- a/src/app/component/profile/profile.component.scss
+++ b/src/app/component/profile/profile.component.scss
@@ -57,3 +57,9 @@ img {
 .error-message {
   color: red;
 }
+input[readonly] {
+  background-color: #f4f4f4;
+  border: none;
+  color: #888;
+  cursor: not-allowed;
+}
