--- a/src/app/component/section/section.component.html
+++ b/src/app/component/section/section.component.html
@@ -2,7 +2,8 @@
   <div>
     <button type="button" class="btn btn-primary" (click)="openModal()">
       Add Section
-    </button>
+    </button>{{"  "}}
+    <button class="btn btn-primary" (click)="goBack()">Back</button>
   </div>
   <div>
     <ng-container *ngIf="isModalOpen">
@@ -31,7 +32,7 @@
       (click)="section.data ? null : roteToSubSection(section)"
     >
       <div class="card_div">
-        <div  class="card_div2">
+        <div class="card_div2">
           <h2>{{ section.sno }}.</h2>
           <h2>
             <ng-container *ngFor="let value of section.Name.split(',')">
