--- a/src/app/component/sub-section/sub-section.component.html
+++ b/src/app/component/sub-section/sub-section.component.html
@@ -2,7 +2,9 @@
   <div>
     <button type="button" class="btn btn-primary" (click)="openModal()">
       Add Sub Section
-    </button>
+    </button>{{"  "}}
+    <button class="btn btn-primary" (click)="goBack()">Back</button>
+
   </div>
   <div>
     <ng-container *ngIf="isModalOpen">
