--- a/src/app/containers/question-screen/question-screen.component.html
+++ b/src/app/containers/question-screen/question-screen.component.html
@@ -1,4 +1,5 @@
 <h2>Answer Screen</h2>
+<lib-toastify-toast-container></lib-toastify-toast-container>
 <div class="question-container" *ngFor="let data of postquestion">
   <h5>
     <p><b> Question : </b>{{data.question}}</p>
