--- a/src/app/component/Morecomponents/card2/card2.component.scss
+++ b/src/app/component/Morecomponents/card2/card2.component.scss
@@ -5,12 +5,16 @@ margin: 0;
 cursor: pointer;
 }
 .card-title{
-    background-color: rgb(96, 144, 185);
-    border-radius: 5px;
     margin: 0;
     padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+.card-title h3{
+margin: 20;
 }
 .card-content{
     padding: 5px;
-
+    margin-left: 15px;
 }
