--- a/src/app/component/notifications/notifications.component.html
+++ b/src/app/component/notifications/notifications.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-primary" (click)="openModal()">Add Case Laws</button>
+<button class="btn btn-primary" (click)="openModal()">Add Notification  </button>
 <div>
   <ng-container *ngIf="isDocDisplayOpen">
     <app-doc-display
