--- a/src/app/containers/signup/signup.component.html
+++ b/src/app/containers/signup/signup.component.html
@@ -11,20 +11,20 @@
       <div class="form-group">
         <label for="fullName">Full Name:</label>
         <input type="text" class="form-control" formControlName="fullName" id="fullName" placeholder="Enter Your Name" />
-        <div *ngIf="formsignup.controls['fullName'].invalid && formsignup.controls['fullName'].touched"
-          class="text-danger">Full name is required</div>
+        <small *ngIf="formsignup.controls['fullName'].invalid && formsignup.controls['fullName'].touched"
+          class="text-danger">Full name is required</small>
       </div>
       <div class="form-group">
         <label for="email">Email:</label>
         <input type="email" class="form-control" formControlName="email" id="email" placeholder="Enter Email" />
-        <div *ngIf="formsignup.controls['email'].invalid && formsignup.controls['email'].touched"
-          class="text-danger">Please enter a valid email</div>
+        <small *ngIf="formsignup.controls['email'].invalid && formsignup.controls['email'].touched"
+          class="text-danger">Please enter a valid email</small>
       </div>
       <div class="form-group">
         <label for="pwd">Password:</label>
         <input type="password" class="form-control" formControlName="password" id="pwd" placeholder="Enter Password" />
-        <div *ngIf="formsignup.controls['password'].invalid && formsignup.controls['password'].touched"
-          class="text-danger">Password is required (minimum 6 characters)</div>
+        <small *ngIf="formsignup.controls['password'].invalid && formsignup.controls['password'].touched"
+          class="text-danger">Password is required (minimum 6 characters)</small>
       </div>
       <button type="submit" class="card-header2 button1 btn btn-primary button2" (click)="addData()">Submit</button>&nbsp;
       <button type="reset" class="btn btn-secondary button1">Reset</button><br /><br />
