--- a/src/app/containers/login/login.component.html
+++ b/src/app/containers/login/login.component.html
@@ -22,6 +22,8 @@
       <!-- <a routerLink="/comment"> </a>-->
       <button type="login" class="btn btn-primary" (click)="login()">Log In</button><br><br>
       If you have not an account.Please <a class="signup-link" routerLink="/signup">Registration here</a>
+      <br>
+      If you have forgot password <a class="signup-link" routerLink="/forgotpassword">Forgot Password</a>
     </form>
   </div>
 </div>
