--- a/src/app/component/section/section.component.scss
+++ b/src/app/component/section/section.component.scss
@@ -20,3 +20,13 @@
 .fa-solid.fa-file {
   font-size: 2rem; /* Adjust the icon size as needed */
 }
+.headButton {
+  // position: fixed;
+  // top: 64px;
+  // width: 100%;
+  // // background-color: #ffffff;
+  // padding: 10px;
+  // z-index: 999;
+  // // border-bottom: 1px solid black;
+  // margin-left: 1px;
+}
