--- a/src/app/component/section/section.component.html
+++ b/src/app/component/section/section.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div>
+  <div class="headButton">
     <button type="button" class="btn btn-primary" (click)="openModal()">
       Add Section
     </button>{{"  "}}
